<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="20dp"
    android:background="@drawable/shape_data_items"
    android:padding="20dp">

    <ImageView
        android:id="@+id/image_check_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_favorite_check"
        android:src="@drawable/selector_ic_favorite_vacancy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_looking_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/stub_title_looking_number"
            android:textColor="@color/green" />

        <TextView
            android:id="@+id/title_vacancy_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/stub_title_vacancy_name"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="12dp" />

        <TextView
            android:id="@+id/title_salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/stub_title_salary"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/title_town"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stub_title_town"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/layout_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/title_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:text="@string/stub_title_company_name"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/description_company_check_icon"
                android:src="@drawable/ic_company_check" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_experience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="6dp"
                android:contentDescription="@string/description_experience_icon"
                android:src="@drawable/ic_experience" />

            <TextView
                android:id="@+id/title_layout_experience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stub_title_experience"
                android:textColor="@color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/title_publication_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/stub_title_publish_date"
            android:textColor="@color/dark_gray" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_response"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/shape_response_button"
            android:text="@string/title_button_response"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>