<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="20dp"
    tools:context=".ui.vacancy_card.VacancyCardActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_stub"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:gravity="center"
            android:text="@string/stub_view_vacancy_card"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="22sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_back" />

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/description_vacancy_card_back_arrow"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_check_favorite"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/description_favorite_check"
            android:src="@drawable/selector_ic_favorite_vacancy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_vacancy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_back">

            <TextView
                android:id="@+id/title_vacancy_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stub_title_vacancy_name"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_salary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/stub_title_salary"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_vacancy_name" />

            <TextView
                android:id="@+id/title_experience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/stub_title_experience_full"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_salary" />

            <TextView
                android:id="@+id/title_schedules"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stub_title_schedules"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_experience" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_applied"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/shape_vacancy_card_users"
                android:padding="8dp"
                app:layout_constraintEnd_toStartOf="@+id/layout_look"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_schedules">

                <TextView
                    android:id="@+id/title_applied_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/stub_title_applied_number"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toStartOf="@+id/image_user"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/image_user"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/description_image_user_icon"
                    android:src="@drawable/ic_user"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_look"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/shape_vacancy_card_users"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/layout_applied"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/layout_applied"
                app:layout_constraintTop_toTopOf="@+id/layout_applied">

                <TextView
                    android:id="@+id/title_looking_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/stub_title_looking_number_card"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toStartOf="@+id/image_look"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/image_look"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/description_look_image"
                    android:src="@drawable/ic_look"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>